Json data updated

--- a/templates/final_plot.html
+++ b/templates/final_plot.html
@@ -443,7 +443,7 @@ var geojson = {
     {
       "type": "Feature",
       "properties": {
-        "title": "Hunphead Wrasse",
+        "title": "Humphead Wrasse",
         "description": "The humphead wrasse is an enormous coral reef fish—growing over six feet long—with a prominent bulge on its forehead",
         "icon": "Fish",
         "iconUrl": "static/images/fish.svg"
@@ -579,7 +579,7 @@ var geojson = {
     {
       "type": "Feature",
       "properties": {
-        "title": "Saolo",
+        "title": "Saola",
         "description": "Saola (pronounced: sow-la) are recognized by two parallel horns with sharp ends, which can reach 20 inches in length",
         "icon": "Deer",
         "iconUrl": "static/images/deer.svg"
