--- a/templates/home.html
+++ b/templates/home.html
@@ -26,9 +26,11 @@
                 padding: 0;
             }
             .mp {
-              background-color:lavender;
+              background-color:#013252;
             }
             .mpdv {
+              padding-bottom: 40px;
+              padding-top: 40px;
             	margin-left: 65px;
               margin-right: 50px;
             }
@@ -38,17 +40,12 @@
               background-repeat: no-repeat;
             }
             #map {
-        /*position: absolute;
-        top: 0;
-        bottom: 0;*/
         width: 1200px;
         height: 1000px;
-        /*border-right-style: groove;
-        border-left-style: groove;*/
         border-style: groove;
         border-width: 9px;
         border-radius: 0px;	
-        border-color:grey;
+        border-color:lightblue;
       }
       .marker {
   background-size: cover;
@@ -84,7 +81,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#map">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#map">Project</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -737,7 +734,7 @@ window.onload = function(){
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">Hostel-13 BIT Mesra</div>
               </div>
             </div>
           </div>
@@ -749,7 +746,7 @@ window.onload = function(){
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">satyabrat35@gmail.com</a>
                 </div>
               </div>
             </div>
@@ -761,7 +758,7 @@ window.onload = function(){
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Phone</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <div class="small text-black-50">+91 9939284889</div>
               </div>
             </div>
           </div>
@@ -774,7 +771,7 @@ window.onload = function(){
           <a href="#" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://github.com/Satyabrat35/Blue-Planet" target="_blank" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -785,7 +782,7 @@ window.onload = function(){
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        The Red Book
       </div>
     </footer>
 
