--- a/templates/index.html
+++ b/templates/index.html
@@ -144,15 +144,15 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img src="/static/pictures/iguana_1.jpg" alt="First slide" width="1150" height="600">
+            <img src= {{pic_3}} alt="First slide" width="1150" height="600">
         </div>
      
         <div class="carousel-item">
-            <img src="/static/pictures/iguana_2.jpg" alt="Second slide" width="1150" height="600">
+            <img src= {{pic_2}} alt="Second slide" width="1150" height="600">
         </div>
 
         <div class="carousel-item">
-            <img src="/static/pictures/iguana_3.jpg" alt="Third slide" width="1150" height="600">
+            <img src= {{pic_1}} alt="Third slide" width="1150" height="600">
         </div>
 
     </div>
