--- a/templates/home.html
+++ b/templates/home.html
@@ -235,7 +235,7 @@
     {
       "type": "Feature",
       "properties": {
-        "title": "Yangtze Finless Porpoise",
+        "title": "Yangtze Porpoise",
         "description": "The Yangtze River, the longest river in Asia, used to be one of the only two rivers in the world that was home to two different species of dolphin—the Yangtze finless porpoise and the Baiji dolphin",
         "icon": "Dolphin",
         "iconUrl": "static/images/dolphin.svg"
