--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
 
 
-    <title>Marine Iguana</title>
+    <title>The Red Book</title>
     <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
@@ -316,7 +316,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; Your Website 2018. All Rights Reserved.</p>
+        <p>Credits to World Wild Fund❤️</p>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#">Privacy</a>
