--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,14 @@
     <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="/static/js/new-age.min.js"></script>
+    <script src="/static/js/caro.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Annie Use Your Telescope' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Crafty Girls' rel='stylesheet'>
     <link rel="stylesheet" href="/static/icofont/icofont.min.css">
+    <link rel="stylesheet" href="/static/css/caro.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 
@@ -290,8 +292,143 @@
       </div>
     </section>
 
-    <section class="contact bg-primary" id="contact">
+    <section>
       <div class="container">
+          <div class="section-heading text-center">
+              <h2 style="color:indianred"> RELATED SPECIES </h2>
+              <br/><br/><br/>
+            </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="carousel slide multi-item-carousel" id="theCarousel">
+              <div class="carousel-inner">
+                <div class="item active">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bluewhale_1.jpg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bison_1.jpeg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bkrhino_1.jpg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bluefin_1.jpg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bigeye_1.jpg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/beluga_1.jpg" height="300" width="300"></a></div>
+                </div>
+                <!-- add  more items here -->
+                <!-- Example item start:  -->
+                
+                <div class="item">
+                  <div class="col-xs-4"><a href="#1"><img src="/static/pictures/amur_1.jpg"  height="300" width="300"></a></div>
+                </div>
+                <div class="item">
+                    <div class="col-xs-4"><a href="#1"><img src="/static/pictures/bonobo_1.jpg"  height="300" width="300"></a></div>
+                  </div>
+                <div class="item">
+                    <div class="col-xs-4"><a href="#1"><img src="/static/pictures/crgorilla_2.jpg"  height="300" width="300"></a></div>
+                  </div>
+                <div class="item">
+                    <div class="col-xs-4"><a href="#1"><img src="/static/pictures/dugong_1.jpg"  height="300" width="300"></a></div>
+                  </div>
+                <div class="item">
+                    <div class="col-xs-4"><a href="#1"><img src="/static/pictures/greenturtle_1.jpg"  height="300" width="300"></a></div>
+                  </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/hawks_1.jpg"  height="300" width="300"></a></div>
+                    </div>    
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/iguana_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/inele_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/jaguar_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/malayantiger_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/monkey_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/narwhal_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/orangutan_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/polar_1.jpg"  height="300" width="300"></a></div>
+                    </div>   
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/red_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/rock_1.jpg"  height="300" width="300"></a></div>
+                    </div>   
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/saola_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/sealion_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/shark_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/snowleo_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/sumatraele_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/vaquita_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/wilddog_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/wrasse_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                  <div class="item">
+                      <div class="col-xs-4"><a href="#1"><img src="/static/pictures/yangtze_1.jpg"  height="300" width="300"></a></div>
+                    </div>
+                <!--  Example item end -->
+              </div>
+              <a class="left carousel-control" href="#theCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+              <a class="right carousel-control" href="#theCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script>
+        // Instantiate the Bootstrap carousel
+$('.multi-item-carousel').carousel({
+    interval: false
+  });
+  
+  // for every slide in carousel, copy the next slide's item in the slide.
+  // Do the same for the next, next item.
+  $('.multi-item-carousel .item').each(function(){
+    var next = $(this).next();
+    if (!next.length) {
+      next = $(this).siblings(':first');
+    }
+    next.children(':first-child').clone().appendTo($(this));
+    
+    if (next.next().length>0) {
+      next.next().children(':first-child').clone().appendTo($(this));
+    } else {
+        $(this).siblings(':first').children(':first-child').clone().appendTo($(this));
+    }
+  });
+      </script>
+      <!--<div class="container">
         <h3> nileshkumar1998@gmail.com </h3>
         <h3> satyabrat35@gmail.com </h3>
         <ul class="list-inline list-social">
@@ -311,12 +448,12 @@
             </a>
           </li>
         </ul>
-      </div>
+      </div>-->
     </section>
 
     <footer>
       <div class="container">
-        <p>Credits to World Wild Fund❤️</p>
+        <p>Credits to World Wild Fund and Mapbox Studio ❤️</p>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#">Privacy</a>
