Must be the final

--- a/templates/home.html
+++ b/templates/home.html
@@ -782,7 +782,8 @@ window.onload = function(){
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        The Red Book
+        The Red Book <br/><br/>
+        Credits to World Wildlife Fund and Mapbox Studio ❤️
       </div>
     </footer>
 
