--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
             .mpdv {
               padding-bottom: 40px;
               padding-top: 40px;
-            	margin-left: 65px;
+              margin-left: 65px;
               margin-right: 50px;
             }
             .bkg {
@@ -44,7 +44,7 @@
         height: 1000px;
         border-style: groove;
         border-width: 9px;
-        border-radius: 0px;	
+        border-radius: 0px; 
         border-color:lightblue;
       }
       .marker {
@@ -96,7 +96,7 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">  The Red Book </h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5"> An Education Website About Endangered Species and the Efforts to Save Them </h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5"> An Educational Website About Endangered Species and the Efforts to Save Them </h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
         </div>
       </div>
@@ -765,10 +765,10 @@ window.onload = function(){
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://en-gb.facebook.com/login/" target="_blank" class="mx-2">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://twitter.com/login?lang=en" target="_blank" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
           <a href="https://github.com/Satyabrat35/Blue-Planet" target="_blank" class="mx-2">
