--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
       <li><a class = nav-link js-scroll-trigger href="#download"> <h3> &nbsp Facts &nbsp </h3> </a></li>
       <li><a class = nav-link js-scroll-trigger  href="#features"> <h3> &nbsp Why They Matter &nbsp </h3></a></li>
       <li><a class = nav-link js-scroll-trigger  href="#helpus"> <h3> &nbsp How Can You Help &nbsp </h3></a></li>
-      <li><a class = nav-link js-scroll-trigger  href="#contact"> <h3> &nbsp Contact Us &nbsp &nbsp</h3></a></li>
+      <li><a class = nav-link js-scroll-trigger  href="#rel_species"> <h3> &nbsp Related Species &nbsp &nbsp</h3></a></li>
     </ul>
     <div>
       <form action="/" id="myForm" style="padding-top:13px;padding-left:40px;"><input type="submit" class="btn btn-info" value=" Home " id="back"></form>
@@ -169,7 +169,7 @@
     </a>
 
 </div>
-	
+  
             </div>
           </div>
         </div>
@@ -292,7 +292,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="rel_species">
       <div class="container">
           <div class="section-heading text-center">
               <h2 style="color:indianred"> RELATED SPECIES </h2>
@@ -303,100 +303,97 @@
             <div class="carousel slide multi-item-carousel" id="theCarousel">
               <div class="carousel-inner">
                 <div class="item active">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Blue Whale")}}><img src="/static/pictures/bluewhale_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Blue Whale")}}><img src="/static/pictures/bluewhale_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                  <div class="col-xs-4"><a href={{url_for('save',variable="Plain Bisons")}}><img src="/static/pictures/bison_1.jpeg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href={{url_for('save',variable="Plain Bisons")}}><img src="/static/pictures/bison_1.jpeg"  height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Black Rhino")}}><img src="/static/pictures/bkrhino_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Black Rhino")}}><img src="/static/pictures/bkrhino_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Bluefin Tuna")}}><img src="/static/pictures/bluefin_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Bluefin Tuna")}}><img src="/static/pictures/bluefin_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Bigeye Tuna")}}><img src="/static/pictures/bigeye_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Bigeye Tuna")}}><img src="/static/pictures/bigeye_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Beluga")}}><img src="/static/pictures/beluga_1.jpg" height="300" width="300"></a></div>
-                </div>
-                <!-- add  more items here -->
-                <!-- Example item start:  -->
-                
-                <div class="item">
-                  <div class="col-xs-4"><a href= {{url_for('save',variable="Amur Leopard")}}><img src="/static/pictures/amur_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Beluga")}}><img src="/static/pictures/beluga_1.jpg" height="300" width="320" style="border-radius:50%"></a></div>
                 </div>
                 <div class="item">
-                    <div class="col-xs-4"><a href= {{url_for('save',variable="Bonobo")}}><img src="/static/pictures/bonobo_1.jpg"  height="300" width="300"></a></div>
+                  <div class="col-xs-4"><a href= {{url_for('save',variable="Amur Leopard")}}><img src="/static/pictures/amur_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
+                </div>
+                <div class="item">
+                    <div class="col-xs-4"><a href= {{url_for('save',variable="Bonobo")}}><img src="/static/pictures/bonobo_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                   </div>
                 <div class="item">
-                    <div class="col-xs-4"><a href= {{url_for('save',variable="Cross River Gorilla")}}><img src="/static/pictures/crgorilla_2.jpg"  height="300" width="300"></a></div>
+                    <div class="col-xs-4"><a href= {{url_for('save',variable="Cross River Gorilla")}}><img src="/static/pictures/crgorilla_2.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                   </div>
                 <div class="item">
-                    <div class="col-xs-4"><a href= {{url_for('save',variable="Dugong")}}><img src="/static/pictures/dugong_1.jpg"  height="300" width="300"></a></div>
+                    <div class="col-xs-4"><a href= {{url_for('save',variable="Dugong")}}><img src="/static/pictures/dugong_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                   </div>
                 <div class="item">
-                    <div class="col-xs-4"><a href= {{url_for('save',variable="Green Turtle")}}><img src="/static/pictures/greenturtle_1.jpg"  height="300" width="300"></a></div>
+                    <div class="col-xs-4"><a href= {{url_for('save',variable="Green Turtle")}}><img src="/static/pictures/greenturtle_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                   </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Hawksbill Turtle")}}><img src="/static/pictures/hawks_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Hawksbill Turtle")}}><img src="/static/pictures/hawks_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>    
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Marine Iguana")}}><img src="/static/pictures/iguana_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Marine Iguana")}}><img src="/static/pictures/iguana_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Indian Elephant")}}><img src="/static/pictures/inele_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Indian Elephant")}}><img src="/static/pictures/inele_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Jaguar")}}><img src="/static/pictures/jaguar_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Jaguar")}}><img src="/static/pictures/jaguar_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Malayan Tiger")}}><img src="/static/pictures/malayantiger_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Malayan Tiger")}}><img src="/static/pictures/malayantiger_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Black Spider Monkey")}}><img src="/static/pictures/monkey_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Black Spider Monkey")}}><img src="/static/pictures/monkey_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Narwhal")}}><img src="/static/pictures/narwhal_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Narwhal")}}><img src="/static/pictures/narwhal_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Bornean Orangutan")}}><img src="/static/pictures/orangutan_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Bornean Orangutan")}}><img src="/static/pictures/orangutan_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Polar Bear")}}><img src="/static/pictures/polar_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Polar Bear")}}><img src="/static/pictures/polar_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>   
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Red Panda")}}><img src="/static/pictures/red_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Red Panda")}}><img src="/static/pictures/red_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Rockhopper Penguin")}}><img src="/static/pictures/rock_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Rockhopper Penguin")}}><img src="/static/pictures/rock_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>   
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Saola")}}><img src="/static/pictures/saola_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Saola")}}><img src="/static/pictures/saola_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Sea Lions")}}><img src="/static/pictures/sealion_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Sea Lions")}}><img src="/static/pictures/sealion_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Great White Shark")}}><img src="/static/pictures/shark_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Great White Shark")}}><img src="/static/pictures/shark_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Snow Leopard")}}><img src="/static/pictures/snowleo_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Snow Leopard")}}><img src="/static/pictures/snowleo_3.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Sumatran Elephant")}}><img src="/static/pictures/sumatraele_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Sumatran Elephant")}}><img src="/static/pictures/sumatraele_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Vaquita")}}><img src="/static/pictures/vaquita_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Vaquita")}}><img src="/static/pictures/vaquita_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="African Wild Dog")}}><img src="/static/pictures/wilddog_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="African Wild Dog")}}><img src="/static/pictures/wilddog_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Humphead Wrasse")}}><img src="/static/pictures/wrasse_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Humphead Wrasse")}}><img src="/static/pictures/wrasse_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                   <div class="item">
-                      <div class="col-xs-4"><a href= {{url_for('save',variable="Yangtze Porpoise")}}><img src="/static/pictures/yangtze_1.jpg"  height="300" width="300"></a></div>
+                      <div class="col-xs-4"><a href= {{url_for('save',variable="Yangtze Porpoise")}}><img src="/static/pictures/yangtze_1.jpg"  height="300" width="320" style="border-radius:50%"></a></div>
                     </div>
                 <!--  Example item end -->
               </div>
@@ -407,13 +404,10 @@
         </div>
       </div>
       <script>
-        // Instantiate the Bootstrap carousel
+      
 $('.multi-item-carousel').carousel({
     interval: false
   });
-  
-  // for every slide in carousel, copy the next slide's item in the slide.
-  // Do the same for the next, next item.
   $('.multi-item-carousel .item').each(function(){
     var next = $(this).next();
     if (!next.length) {
@@ -428,27 +422,6 @@ $('.multi-item-carousel').carousel({
     }
   });
       </script>
-      <!--<div class="container">
-        <h3> nileshkumar1998@gmail.com </h3>
-        <h3> satyabrat35@gmail.com </h3>
-        <ul class="list-inline list-social">
-          <li class="list-inline-item social-twitter">
-            <a href="https://twitter.com/NileshKumar09">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-facebook">
-            <a href="https://www.facebook.com/nilesh.kumar.35110">
-              <i class="fa fa-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item social-google-plus">
-            <a href="https://plus.google.com/u/0/112797940918714883375">
-              <i class="fa fa-google-plus"></i>
-            </a>
-          </li>
-        </ul>
-      </div>-->
     </section>
 
     <footer>
